# see https://peps.python.org/pep-0518/
[project]
name = "uren"
version = "1.0.0"
description = " "
authors = [
    {name = "Michiel Meeuwissen", email = "git@meeuw.org"},
]


dependencies = [
    "gspread==6.2.0",
    "pylatex==1.4.2"

]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
testing = [
    "pytest==7.4.3",
    "xmldiff==2.6.3",
    "nose==1.3.7"
]

[project.scripts]

